--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,122 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+//@import "header";
 
 body {
-  background: $c-gray;
+  margin: 0;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.form {
+  &__field {
+    margin-bottom: 8px;
+  }
+}
+
+.input,
+.textarea {
+  text-align: center;
+  line-height: normal;
+  height: 52px;
+  background-color: #eee;
+  font-weight: 600;
+  color: #393939;
+  text-transform: uppercase;
+  width: 100%;
+  border: none;
+
+  &::placeholder {
+    font-size: 14px;
+  }
+}
+
+.textarea {
+  height: 100px;
+  padding-top: 11px;
+  border: none;
+}
+
+.button {
+  font-size: 14px;
+  line-height: 52px;
+  height: 52px;
+  display: block;
+  background-color: #00aaef;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+
+  &__inline {
+    padding: 0 60px;
+    display: inline-block;
+    width: auto;
+  }
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 940px;
+}
+
+/*HEADER*/
+
+.hero {
+  background: url(../images/bg_header.jpg) no-repeat 50% 100%;
+  background-size: cover;
+  position: relative;
+
+  & .container {
+    position: relative;
+    height: 100vh;
+    min-height: 500px;
+
+    & .header {
+      position: absolute;
+      top: 100px;
+      left: 0;
+      right: 0;
+      text-align: center;
+
+      &__logo {
+        position: absolute;
+        top: -46px;
+        left: 50%;
+        transform: translate(-50%, 0);
+
+        &--img {
+          height: 80px;
+        }
+      }
+
+      &__phone {
+        float: left;
+        text-decoration: none;
+        color: #fff;
+      }
+
+      &__call {
+        float: right;
+        text-decoration: none;
+        color: #fff;
+        text-transform: uppercase;
+        border-bottom: 1px dashed #606060;
+      }
+
+      & .main-menu {
+        position: absolute;
+        bottom: 60px;
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: space-between;
+        list-style: none;
+
+        & a {
+          text-transform: uppercase;
+          color: #fff;
+          text-decoration: none;
+          font-weight: 600;
+        }
+      }
+    }
+  }
 }
