--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,122 +1,132 @@
-//@import "header";
+@import "__common";
+@import "__header";
+@import "__apart";
+@import "__testimonials";
+@import "__footer";
 
-body {
-  margin: 0;
-  font-family: "Ubuntu", sans-serif;
-}
-
-.form {
-  &__field {
-    margin-bottom: 8px;
+@media (max-width: 980px) {
+  .container {
+    margin: 0 20px;
   }
 }
 
-.input,
-.textarea {
-  text-align: center;
-  line-height: normal;
-  height: 52px;
-  background-color: #eee;
-  font-weight: 600;
-  color: #393939;
-  text-transform: uppercase;
-  width: 100%;
-  border: none;
+@media (max-width: 950px) {
+  .best {
 
-  &::placeholder {
-    font-size: 14px;
+    &__intro {
+      float: none;
+      margin-right: 10px;
+
+      & br {
+        display: none;
+      }
+    }
+
+    &__text {
+      float: none;
+
+      & br {
+        display: none;
+      }
+    }
   }
 }
 
-.textarea {
-  height: 100px;
-  padding-top: 11px;
-  border: none;
-}
-
-.button {
-  font-size: 14px;
-  line-height: 52px;
-  height: 52px;
-  display: block;
-  background-color: #00aaef;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #fff;
-  font-weight: 600;
-
-  &__inline {
-    padding: 0 60px;
-    display: inline-block;
-    width: auto;
+@media (max-width: 930px) {
+  .testimonials {
+    &__wrapper {
+      display: block;
+      width: 258px;
+      margin: 20px auto 0;
+    }
   }
 }
 
-.container {
-  margin: 0 auto;
-  max-width: 940px;
-}
-
-/*HEADER*/
-
-.hero {
-  background: url(../images/bg_header.jpg) no-repeat 50% 100%;
-  background-size: cover;
-  position: relative;
-
-  & .container {
-    position: relative;
-    height: 100vh;
-    min-height: 500px;
-
-    & .header {
+@media (max-width: 780px) {
+  .hero {
+    &:before {
       position: absolute;
-      top: 100px;
+      top: 0;
       left: 0;
       right: 0;
+      bottom: 0;
+      background: rgba(#000, 0.5);
+      content: "";
+    }
+  }
+
+  .main-menu {
+    position: static;
+    display: block;
+    padding-top: 200px;
+
+    & li {
+      margin-bottom: 10px;
       text-align: center;
+      font-size: 25px;
+    }
+  }
 
-      &__logo {
-        position: absolute;
-        top: -46px;
-        left: 50%;
-        transform: translate(-50%, 0);
+  .header__logo {
+    left: 45%;
+    transform: none;
+    top: -55px;
+  }
 
-        &--img {
-          height: 80px;
-        }
+  .section {
+    padding: 60px 0;
+  }
+}
+
+@media (max-width: 720px) {
+  .header {
+    &__logo {
+      left: 0;
+      transform: none;
+      top: 0;
+
+      &--img {
+        height: 40px;
       }
+    }
 
-      &__phone {
-        float: left;
-        text-decoration: none;
-        color: #fff;
-      }
+    &__phone {
+      float: right;
+      margin-bottom: 10px;
+      padding-top: 10px;
+    }
 
-      &__call {
-        float: right;
-        text-decoration: none;
-        color: #fff;
-        text-transform: uppercase;
-        border-bottom: 1px dashed #606060;
-      }
+    &__call {
+      clear: right;
+    }
+  }
 
-      & .main-menu {
-        position: absolute;
-        bottom: 60px;
-        left: 0;
-        right: 0;
-        display: flex;
-        justify-content: space-between;
-        list-style: none;
+  .apart {
+    &__photo {
+      height: 100px;
+    }
+  }
 
-        & a {
-          text-transform: uppercase;
-          color: #fff;
-          text-decoration: none;
-          font-weight: 600;
-        }
-      }
+  .section {
+    &__left,
+    &__right {
+      float: none;
+      width: auto;
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .section {
+    &__title {
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: none;
+      margin-bottom: 40px;
+      text-align: center;
+      font-size: 30px;
     }
   }
 }
