--- a/styles/__apart.scss
+++ b/styles/__apart.scss
@@ -7,10 +7,16 @@
     font-weight: 600;
     font-size: 16px;
 
-    & span {
+    & .apart__map {
       color: #00aaef;
       font-weight: 300;
       font-size: 16px;
+      text-decoration: none;
+      transition: box-shadow, 0.4s;
+
+      &:hover {
+        box-shadow: 0 3px 2px 0 rgba(0,170,239,0.67);
+      }
     }
   }
 
@@ -24,49 +30,44 @@
     }
 
     &--top-right,
-    &--left-right,
-    &--center-right,
-    &__photo,
-    &:first-child {
-      flex: 2;
+    &--center-left,
+    &--bottom-right {
+      flex-grow: 1;
     }
 
     &--top-left,
-    &--left-left,
-    &--center-left,
-    &__photo,
-    &:first-child {
-      flex: 2;
+    &--center-right,
+    &--bottom-left {
+      flex-grow: 2;
     }
 
     &--top-left {
-      background: url(../images/gallery1.png) no-repeat 50% 50%;
+      background: url(../images/apart1.jpg) no-repeat 50% 50%;
       background-size: cover;
-
     }
 
     &--top-right {
-      background: url(../images/gallery2.png) no-repeat 50% 50%;
+      background: url(../images/apart2.jpeg) no-repeat 50% 50%;
       background-size: cover;
     }
 
     &--center-left {
-      background: url(../images/gallery3.png) no-repeat 50% 50%;
+      background: url(../images/apart3.jpg) no-repeat 50% 50%;
       background-size: cover;
     }
 
     &--center-right {
-      background: url(../images/gallery4.png) no-repeat 50% 50%;
+      background: url(../images/apart4.jpg) no-repeat 50% 50%;
       background-size: cover;
     }
 
     &--bottom-left {
-      background: url(../images/gallery5.png) no-repeat 50% 50%;
+      background: url(../images/apart5.jpg) no-repeat 50% 50%;
       background-size: cover;
     }
 
     &--bottom-right {
-      background: url(../images/gallery6.png) no-repeat 50% 50%;
+      background: url(../images/apart6.jpg) no-repeat 50% 50%;
       background-size: cover;
     }
   }
