--- a/styles/__common.scss
+++ b/styles/__common.scss
@@ -17,6 +17,7 @@ body {
   text-align: center;
   line-height: normal;
   height: 52px;
+  font-size: 16px;
   background-color: #eee;
   font-weight: 600;
   color: #393939;
@@ -47,9 +48,18 @@ body {
   font-weight: 600;
   width: 100%;
   border: 0;
+  cursor: pointer;
+  transition: background-color, 0.4s;
 
   &:hover {
     background-color: darken($color, $amount);
+  }
+
+  &:active {
+    background-color: #fff;
+    border: 1px solid $color;
+    color: $color;
+    box-sizing: border-box;
   }
 
   &__inline {
@@ -79,9 +89,11 @@ body {
   }
 
   & .best {
+    &__description {
+      display: flex;
+    }
 
     &__intro {
-      float: left;
       width: 33%;
       font-size: 48px;
       text-transform: uppercase;
@@ -98,7 +110,6 @@ body {
     }
 
     &__text {
-      float: right;
       width: 66%;
     }
   }
