--- a/styles/__header.scss
+++ b/styles/__header.scss
@@ -33,6 +33,11 @@
     float: left;
     text-decoration: none;
     color: #fff;
+    transition: color 0.4s;
+
+    &:hover {
+      color: gray;
+    }
   }
 
   &__call {
@@ -40,10 +45,12 @@
     text-decoration: none;
     color: #fff;
     text-transform: uppercase;
-    border-bottom: 1px dashed #606060;
+    border-bottom: 1px dashed #fff;
+    transition: border-color 0.4s, color 0.4s;
 
     &:hover {
       color: gray;
+      border-color: #606060;
     }
   }
 }
@@ -62,6 +69,7 @@
     color: #fff;
     text-decoration: none;
     font-weight: 600;
+    transition: color 0.4s;
 
     &:hover {
       color: gray;
