--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,65 +6,27 @@
 
 @media (max-width: 980px) {
   .container {
-    margin: 0 20px;
-  }
-}
-
-@media (max-width: 950px) {
-  .best {
-
-    &__intro {
-      float: none;
-      margin-right: 10px;
-
-      & br {
-        display: none;
-      }
-    }
-
-    &__text {
-      float: none;
-
-      & br {
-        display: none;
-      }
-    }
-  }
-}
-
-@media (max-width: 930px) {
-  .testimonials {
-    &__wrapper {
-      display: block;
-      width: 258px;
-      margin: 20px auto 0;
-    }
+    padding: 0 20px;
   }
 }
 
 @media (max-width: 780px) {
-  .hero {
-    &:before {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(#000, 0.5);
-      content: "";
-    }
-  }
-
   .main-menu {
-    position: static;
+    position: absolute;
     display: block;
-    padding-top: 200px;
+    top: 200px;
+    margin: 0;
+    padding: 0;
 
     & li {
       margin-bottom: 10px;
       text-align: center;
       font-size: 25px;
     }
+  }
+
+  .header {
+    padding: 0 20px;
   }
 
   .header__logo {
@@ -79,25 +41,39 @@
 }
 
 @media (max-width: 720px) {
+  .hero {
+    &:before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(#000, 0.5);
+      content: "";
+    }
+  }
+
   .header {
     &__logo {
-      left: 0;
+      left: 20px;
       transform: none;
-      top: 0;
+      top: -80px;
 
       &--img {
-        height: 40px;
+        height: 70px;
       }
     }
 
     &__phone {
       float: right;
       margin-bottom: 10px;
+      margin-top: -80px;
       padding-top: 10px;
     }
 
     &__call {
       clear: right;
+      margin-top: -40px;
     }
   }
 
@@ -115,6 +91,18 @@
       margin-bottom: 30px;
     }
   }
+
+  .testimonials {
+    &__wrapper {
+      display: block;
+      width: 258px;
+      margin: 20px auto 0;
+    }
+
+    &__person {
+      margin-bottom: 30px;
+    }
+  }
 }
 
 @media (max-width: 600px) {
@@ -127,6 +115,45 @@
       margin-bottom: 40px;
       text-align: center;
       font-size: 30px;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .best {
+    &__description {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &__intro {
+      margin-bottom: 10px;
+      margin-left: -145px;
+      width: 100%;
+    }
+
+    &__text {
+      text-align: justify;
+      width: 100%;
+    }
+  }
+
+  .contact {
+    & .container {
+      & .section__left {
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .main-menu {
+    & li {
+      & a {
+        font-size: 16px;
+      }
     }
   }
 }
